更新资源管理接口